@@ -12,6 +12,7 @@ AC3 audio tracks are now remuxed and not reencoded
 
 Default platform charset issue
 Transcode buffer optimization on Windows
+Program crash when too many widechars filename was used
 A/V sync automatic managment for ISO and MKV+XVID
 M4V now streamed by default, you have to enter the #Transcoded# folder to force the transcode (like AVI files)
 WMA now transcoded by default
